fix: prevent settings buttons clipping

--- a/src/app/(dashboard)/dashboard/settings/SettingsBookmarkButton.module.css
+++ b/src/app/(dashboard)/dashboard/settings/SettingsBookmarkButton.module.css
@@ -1,5 +1,5 @@
 .bookmarkBtn {
-  width: 100px;
+  width: 160px;
   height: 40px;
   border-radius: 40px;
   border: 1px solid rgba(255, 255, 255, 0.349);
@@ -32,7 +32,7 @@
 
 .text {
   height: 100%;
-  width: 60px;
+  width: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,7 +44,7 @@
 }
 
 .bookmarkBtn:hover .IconContainer {
-  width: 90px;
+  width: 150px;
   transition-duration: 0.3s;
 }
 
